--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "author": "goswami.archive@gmail.com",
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "lint": "node tools/lint-markdown.js -p content/**/*.md"
   },
   "devDependencies": {
     "cheerio": "1.0.0-rc.12",
-    "commander": "11.1.0",
-    "glob": "10.3.10",
+    "commander": "12.1.0",
+    "glob": "10.4.1",
     "gray-matter": "4.0.3",
-    "husky": "8.0.3",
-    "lint-staged": "15.0.2",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.5",
     "revalidator": "0.3.1"
   }
 }
