--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
     "prepare": "husky",
-    "lint": "node tools/lint-markdown.js -p content/**/*.md"
+    "lint": "node tools/lint-markdown.js -p content/**/*.md",
+    "genmd": "plop --plopfile tools/plop/plopfile.js --path"
   },
   "devDependencies": {
     "cheerio": "1.0.0-rc.12",
@@ -15,6 +16,8 @@
     "gray-matter": "4.0.3",
     "husky": "9.0.11",
     "lint-staged": "15.2.5",
+    "lodash.kebabcase": "^4.1.1",
+    "plop": "4.0.1",
     "revalidator": "0.3.1"
   }
 }
