--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "glob": "10.4.1",
     "gray-matter": "4.0.3",
     "husky": "9.0.11",
+    "jsmediatags": "^3.9.7",
     "lint-staged": "15.2.5",
     "lodash.kebabcase": "^4.1.1",
     "plop": "4.0.1",
