--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "devDependencies": {
     "cheerio": "1.0.0-rc.12",
     "commander": "12.1.0",
-    "glob": "10.4.1",
+    "glob": "10.4.2",
     "gray-matter": "4.0.3",
     "husky": "9.0.11",
     "jsmediatags": "^3.9.7",
-    "lint-staged": "15.2.5",
-    "lodash.kebabcase": "^4.1.1",
+    "lint-staged": "15.2.7",
     "plop": "4.0.1",
-    "revalidator": "0.3.1"
+    "revalidator": "0.3.1",
+    "slugify": "1.6.6"
   }
 }
