--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "husky": "9.0.11",
     "jsmediatags": "^3.9.7",
     "lint-staged": "15.2.7",
+    "lodash.kebabcase": "4.1.1",
     "plop": "4.0.1",
-    "revalidator": "0.3.1",
-    "slugify": "1.6.6"
+    "revalidator": "0.3.1"
   }
 }
