--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "node tools/lint/lint-markdown.js -p content/**/*.md",
     "genmd": "plop --plopfile tools/plop/plopfile.js --path",
     "archive": "node tools/archive/archive.js -- ",
-    "drafts": "node tools/archive/archive.js search content/ draft=true"
+    "drafts": "node tools/archive/archive.js search content/ draft=true",
+    "notext": "node tools/archive/archive.js search content/ content=''"
   },
   "devDependencies": {
     "axios": "1.7.2",
