--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "author": "goswami.archive@gmail.com",
   "license": "CC-BY-NC-SA-4.0",
   "type": "module",
+  "imports": {
+    "#*": "./tools/*"
+  },
   "scripts": {
     "prepare": "husky",
     "archive": "node tools/archive/archive.js",
     "lint": "node tools/archive/archive.js lint -p content/",
     "drafts": "node tools/archive/archive.js search content/ draft=true",
     "notext": "node tools/archive/archive.js search content/ content=''",
-    "genmeta": "node tools/archive/archive.js -- genmeta content/",
-    "genmd": "plop --plopfile tools/plop/plopfile.js --path"
+    "genmeta": "node tools/archive/archive.js -- genmeta content/"
   },
   "devDependencies": {
     "axios": "1.7.2",
@@ -26,6 +28,7 @@
     "lint-staged": "15.2.7",
     "lodash.kebabcase": "4.1.1",
     "music-metadata": "8.3.0",
+    "nunjucks": "3.2.4",
     "plop": "4.0.1",
     "progress": "2.0.3",
     "revalidator": "0.3.1"
