--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "axios": "1.7.2",
     "cheerio": "1.0.0-rc.12",
     "commander": "12.1.0",
-    "glob": "10.4.2",
+    "glob": "11.0.0",
     "gray-matter": "4.0.3",
     "husky": "9.0.11",
+    "joi": "17.13.3",
     "js-yaml": "4.1.0",
-    "jsmediatags": "3.9.7",
     "lint-staged": "15.2.7",
     "lodash.kebabcase": "4.1.1",
-    "music-metadata": "8.3.0",
+    "music-metadata": "9.0.1",
     "nunjucks": "3.2.4",
     "plop": "4.0.1",
-    "progress": "2.0.3",
-    "revalidator": "0.3.1"
+    "progress": "2.0.3"
   }
 }
