--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "9.0.11",
     "joi": "17.13.3",
     "js-yaml": "4.1.0",
+    "jsmediatags": "3.9.7",
     "lint-staged": "15.2.7",
     "lodash.kebabcase": "4.1.1",
     "music-metadata": "9.0.1",
