--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
     "genmeta": "node tools/archive/archive.ts -- genmeta content/"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.48.4",
+    "@dotenvx/dotenvx": "1.49.0",
     "@sindresorhus/slugify": "2.2.1",
-    "assemblyai": "4.14.2",
+    "assemblyai": "4.15.0",
     "axios": "1.11.0",
     "cheerio": "1.1.2",
     "clsx": "2.1.1",
     "commander": "14.0.0",
     "glob": "11.0.3",
     "gray-matter": "4.0.3",
-    "joi": "17.13.3",
+    "joi": "18.0.0",
     "js-yaml": "4.1.0",
     "jsmediatags": "3.9.7",
     "lodash.flow": "3.5.0",
     "lodash.kebabcase": "4.1.1",
-    "music-metadata": "11.7.3",
+    "marked": "16.2.0",
+    "music-metadata": "11.8.3",
     "node-plop": "0.32.0",
     "nunjucks": "3.2.4",
-    "openai": "5.11.0",
+    "openai": "5.12.2",
     "plop": "4.0.1",
     "progress": "2.0.3"
   },
@@ -46,6 +47,6 @@
     "@types/nunjucks": "3.2.6",
     "@types/progress": "2.0.7",
     "husky": "9.1.7",
-    "lint-staged": "16.1.2"
+    "lint-staged": "16.1.5"
   }
 }
