--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "jsmediatags": "3.9.7",
     "lodash.flow": "3.5.0",
     "lodash.kebabcase": "4.1.1",
-    "marked": "16.2.0",
     "music-metadata": "11.8.3",
     "node-plop": "0.32.0",
     "nunjucks": "3.2.4",
@@ -44,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jsmediatags": "3.9.6",
+    "@types/lodash.flow": "^3.5.9",
     "@types/nunjucks": "3.2.6",
     "@types/progress": "2.0.7",
     "husky": "9.1.7",
