--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/jsmediatags": "3.9.6",
     "@types/lodash.flow": "^3.5.9",
+    "@types/node": "24.3.0",
     "@types/nunjucks": "3.2.6",
     "@types/progress": "2.0.7",
     "husky": "9.1.7",
