--- a/package.json
+++ b/package.json
@@ -21,34 +21,34 @@
     "genmeta": "node tools/archive/archive.ts -- genmeta content/"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.49.0",
-    "@sindresorhus/slugify": "2.2.1",
-    "assemblyai": "4.15.0",
-    "axios": "1.11.0",
+    "@dotenvx/dotenvx": "1.51.4",
+    "@sindresorhus/slugify": "3.0.0",
+    "assemblyai": "4.22.1",
+    "axios": "1.13.2",
     "cheerio": "1.1.2",
     "clsx": "2.1.1",
-    "commander": "14.0.0",
-    "glob": "11.0.3",
+    "commander": "14.0.2",
+    "glob": "13.0.0",
     "gray-matter": "4.0.3",
-    "joi": "18.0.0",
-    "js-yaml": "4.1.0",
+    "joi": "18.0.2",
+    "js-yaml": "4.1.1",
     "jsmediatags": "3.9.7",
     "lodash.flow": "3.5.0",
     "lodash.kebabcase": "4.1.1",
-    "music-metadata": "11.8.3",
-    "node-plop": "0.32.0",
+    "music-metadata": "11.10.6",
+    "node-plop": "0.32.3",
     "nunjucks": "3.2.4",
-    "openai": "5.12.2",
-    "plop": "4.0.1",
+    "openai": "6.16.0",
+    "plop": "4.0.4",
     "progress": "2.0.3"
   },
   "devDependencies": {
     "@types/jsmediatags": "3.9.6",
-    "@types/lodash.flow": "^3.5.9",
-    "@types/node": "24.3.0",
+    "@types/lodash.flow": "3.5.9",
+    "@types/node": "25.0.9",
     "@types/nunjucks": "3.2.6",
     "@types/progress": "2.0.7",
     "husky": "9.1.7",
-    "lint-staged": "16.1.5"
+    "lint-staged": "16.2.7"
   }
 }
