--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/nunjucks": "3.2.6",
     "@types/progress": "2.0.7",
     "husky": "9.1.7",
-    "lint-staged": "16.2.7"
+    "lint-staged": "16.2.7",
+    "minimatch": "10.2.0"
   }
 }
